--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ php:
 env:
     global:
         - TEST_COMMAND="composer test"
+    matrix:
+        - SYMFONY_VERSION=3.0.*
+        - SYMFONY_VERSION=2.8.*
+        - SYMFONY_VERSION=2.7.*
 
 branches:
     except:
@@ -25,12 +29,16 @@ matrix:
     fast_finish: true
     include:
         - php: 5.4
-          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci"
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION=2.7.*
+    exclude:
+        - php: 5.4
+          env: SYMFONY_VERSION=3.0.*
 
 before_install:
     - travis_retry composer self-update
 
 install:
+    - travis_retry composer require symfony/symfony:${SYMFONY_VERSION} --no-update
     - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
