--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ php:
     - 5.5
     - 5.6
     - 7.0
+    - 7.1
     - hhvm
 
 env:
@@ -30,6 +31,8 @@ matrix:
     include:
         - php: 5.4
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION=2.7.*
+        - php: 7.1
+          env: SYMFONY_VERSION=4.0.*
     exclude:
         - php: 5.4
           env: SYMFONY_VERSION=3.0.*
