--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,6 @@ cache:
     directories:
         - $HOME/.composer/cache/files
 
-php:
-    - 5.4
-    - 5.5
-    - 5.6
-    - 7.0
-    - 7.1
-    - hhvm
-
 env:
     global:
         - TEST_COMMAND="composer test"
@@ -30,21 +22,33 @@ matrix:
     fast_finish: true
     include:
         - php: 5.4
-          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION=2.7.*
+          env: DEPENDENCIES=minimum COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION=2.7.*
+        - php: 5.5
+        - php: 5.6
+        - php: 7.0
         - php: 7.1
-          env: SYMFONY_VERSION=4.0.*
+          env: SYMFONY_VERSION=3.0.*
+        - php: 7.1
+          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+        - php: hhvm
     exclude:
         - php: 5.4
           env: SYMFONY_VERSION=3.0.*
+    allow_failures:
+        - php: 7.1
+          env: DEPENDENCIES="dev"
 
 before_install:
     - travis_retry composer self-update
+    - if [ "$DEPENDENCIES" = "minimum" ]; then COMPOSER_FLAGS="--prefer-stable --prefer-lowest"; fi;
+    - if [ "$DEPENDENCIES" = "dev" ]; then composer config minimum-stability dev; fi;
 
 install:
     - travis_retry composer require symfony/symfony:${SYMFONY_VERSION} --no-update
     - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
+    - composer validate --strict --no-check-lock
     - $TEST_COMMAND
 
 after_success:
