--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
           env: SYMFONY_VERSION=3.0.*
     allow_failures:
         - php: 7.1
-          env: DEPENDENCIES="dev"
+          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
 
 before_install:
     - travis_retry composer self-update
