--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
         - php: 5.6
         - php: 7.0
         - php: 7.1
-          env: DEPENDENCIES="symfony/lts:^3"
+          env: DEPENDENCIES="symfony/lts:^3" SYMFONY_VERSION=3.0.*
         - php: 7.1
           env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
         - php: hhvm
