--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,22 @@ branches:
 matrix:
     fast_finish: true
     include:
+        # Test stable versions
         - php: 5.4
           env: DEPENDENCIES=minimum COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION=2.7.*
         - php: 5.5
         - php: 5.6
         - php: 7.0
+
+        # Test latest versions:
         - php: 7.1
           env: DEPENDENCIES="symfony/lts:^3" SYMFONY_VERSION=3.0.*
         - php: 7.1
           env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+
+        # Test alternative runtimes:
         - php: hhvm
+
     allow_failures:
         - php: 7.1
           env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
