--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "php-http/client-common": "^1.1"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.5",
-        "henrikbjorn/phpspec-code-coverage" : "^1.0"
+        "phpspec/phpspec": "^2.5 || ^3.0 || ^4.0"
     },
     "autoload": {
         "psr-4": {
