--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: php
-
 sudo: false
 
 cache:
@@ -9,10 +8,6 @@ cache:
 env:
     global:
         - TEST_COMMAND="composer test"
-    matrix:
-        - SYMFONY_VERSION=3.0.*
-        - SYMFONY_VERSION=2.8.*
-        - SYMFONY_VERSION=2.7.*
 
 branches:
     except:
@@ -21,35 +16,44 @@ branches:
 matrix:
     fast_finish: true
     include:
-        # Test stable versions
+          # Test with lowest dependencies
+        - php: 7.1
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak"
+
+          # Test the latest stable release
         - php: 5.4
-          env: DEPENDENCIES=minimum COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION="2.7.* henrikbjorn/phpspec-code-coverage:^1.0"
         - php: 5.5
         - php: 5.6
         - php: 7.0
-
-        # Test latest versions:
         - php: 7.1
-          env: DEPENDENCIES="symfony/lts:^3" SYMFONY_VERSION=3.0.*
-        - php: 7.1
-          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+        - php: 7.2
+          env: COVERAGE=true TEST_COMMAND="composer test-ci" DEPENDENCIES="henrikbjorn/phpspec-code-coverage:^1.0"
 
-        # Test alternative runtimes:
-        - php: hhvm
+          # Force some major versions of Symfony
+        - php: 7.2
+          env: DEPENDENCIES="dunglas/symfony-lock:^2"
+        - php: 7.2
+          env: DEPENDENCIES="dunglas/symfony-lock:^3"
+        - php: 7.2
+          env: DEPENDENCIES="dunglas/symfony-lock:^4"
+
+          # Latest commit to master
+        - php: 7.2
+          env: STABILITY="dev"
 
     allow_failures:
-        - php: 7.1
-          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+          # Dev-master is allowed to fail.
+        - env: STABILITY="dev"
 
 before_install:
-    - travis_retry composer self-update
-    - if [ "$DEPENDENCIES" = "minimum" ]; then COMPOSER_FLAGS="--prefer-stable --prefer-lowest"; fi;
-    - if [ "$DEPENDENCIES" = "dev" ]; then composer config minimum-stability dev; fi;
-    - if [[ $DEPENDENCIES == *"/"* ]]; then composer require --no-update $DEPENDENCIES; fi;
+    - if [[ $COVERAGE != true ]]; then phpenv config-rm xdebug.ini || true; fi
+    - if ! [ -z "$STABILITY" ]; then composer config minimum-stability ${STABILITY}; fi;
+    - if ! [ -z "$DEPENDENCIES" ]; then composer require --no-update ${DEPENDENCIES}; fi;
 
 install:
-    - travis_retry composer require symfony/symfony:${SYMFONY_VERSION} --no-update
-    - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
+    # To be removed when this issue will be resolved: https://github.com/composer/composer/issues/5355
+    - if [[ "$COMPOSER_FLAGS" == *"--prefer-lowest"* ]]; then composer update --prefer-dist --no-interaction --prefer-stable --quiet; fi
+    - composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
     - composer validate --strict --no-check-lock
