--- a/.travis.yml
+++ b/.travis.yml
@@ -23,32 +23,34 @@ matrix:
     include:
         # Test stable versions
         - php: 5.4
-          env: DEPENDENCIES=minimum COVERAGE=true TEST_COMMAND="composer test-ci" SYMFONY_VERSION="2.7.* henrikbjorn/phpspec-code-coverage:^1.0"
+          env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest"
         - php: 5.5
         - php: 5.6
         - php: 7.0
+          env: COVERAGE=true TEST_COMMAND="composer test-ci" DEPENDENCIES="symfony/symfony:2.7.* henrikbjorn/phpspec-code-coverage:^1.0"
 
-        # Test latest versions:
+        # Test LTS versions:
         - php: 7.1
-          env: DEPENDENCIES="symfony/lts:^3" SYMFONY_VERSION=3.0.*
+          env: DEPENDENCIES="symfony/lts:^2"
         - php: 7.1
-          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+          env: DEPENDENCIES="symfony/lts:^3"
+
+        # Test development versions
+        - php: 7.1
+          env: DEPENDENCIES="dev"
 
         # Test alternative runtimes:
         - php: hhvm
 
     allow_failures:
-        - php: 7.1
-          env: DEPENDENCIES="dev" SYMFONY_VERSION=4.0.*
+        - env: DEPENDENCIES="dev"
 
 before_install:
     - travis_retry composer self-update
-    - if [ "$DEPENDENCIES" = "minimum" ]; then COMPOSER_FLAGS="--prefer-stable --prefer-lowest"; fi;
-    - if [ "$DEPENDENCIES" = "dev" ]; then composer config minimum-stability dev; fi;
-    - if [[ $DEPENDENCIES == *"/"* ]]; then composer require --no-update $DEPENDENCIES; fi;
+    - if [ "$STABILITY" != "" ]; then composer config minimum-stability $STABILITY; fi;
+    - if [ "$DEPENDENCIES" != "" ]; then composer require --no-update $DEPENDENCIES; fi
 
 install:
-    - travis_retry composer require symfony/symfony:${SYMFONY_VERSION} --no-update
     - travis_retry composer update ${COMPOSER_FLAGS} --prefer-dist --no-interaction
 
 script:
