--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     },
     "extra": {
         "branch-alias": {
+            "dev-2.x": "2.x-dev",
             "dev-master": "1.0-dev"
         }
     },
