--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "symfony/stopwatch": "^2.7|^3.0|^4.0",
+        "php": "^7.1",
+        "symfony/stopwatch": "^3.4 || ^4.0",
         "php-http/client-common": "^1.1"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.5 || ^3.0 || ^4.0"
+        "phpspec/phpspec": "^4.0"
     },
     "autoload": {
         "psr-4": {
