--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^5.4 || ^7.0",
-        "symfony/stopwatch": "^2.7|^3.0|^4.0",
+        "symfony/stopwatch": "^2.7 || ^3.0 || ^4.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.2-dev"
         }
     },
     "prefer-stable": true,
