--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "symfony/stopwatch": "^2.7|^3.0|^4.0",
-        "php-http/client-common": "^1.1"
+        "php": "^5.4 || ^7.0",
+        "symfony/stopwatch": "^2.7 || ^3.0 || ^4.0",
+        "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.5 || ^3.0 || ^4.0"
@@ -29,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.2-dev"
         }
     },
     "prefer-stable": true,
