--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^5.4 || ^7.0",
-        "symfony/stopwatch": "^2.7 || ^3.0 || ^4.0",
+        "symfony/stopwatch": "^2.7 || ^3.0 || ^4.0 || ^5.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
