--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0",
-        "symfony/stopwatch": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "php": "^7.1",
+        "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.2-dev"
+            "dev-master": "1.3-dev"
         }
     },
     "prefer-stable": true,
