--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.5 || ^3.0 || ^4.0"
+        "phpspec/phpspec": "^7.0"
     },
     "autoload": {
         "psr-4": {
