--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": "^7.3 || ^8.0",
         "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
