--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.3 || ^8.0",
         "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.5 || ^3.0 || ^4.0"
+        "phpspec/phpspec": "^7.0"
     },
     "autoload": {
         "psr-4": {
