--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
             symfony-version: 4.4.*
           - php: '8.0'
             symfony-version: 5.4.*
+          - php: '8.0'
+            symfony-version: 6.0.*
 
     steps:
       - name: Checkout code
