--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.3 || ^8.0",
-        "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0",
+        "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0 || ^6.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
