--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,7 @@ jobs:
     name: PHP ${{ matrix.php }} Latest with Symfony ${{ matrix.symfony-require }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         php: ['7.3', '7.4', '8.0']
         symfony-require: ['*']
