--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,20 +8,20 @@ on:
 
 jobs:
   latest:
-    name: PHP ${{ matrix.php }} Latest with Symfony ${{ matrix.symfony-require }}
+    name: PHP ${{ matrix.php }} Latest with Symfony ${{ matrix.symfony-version }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         php: ['7.3', '7.4', '8.0']
-        symfony-require: ['*']
+        symfony-version: ['*']
         include:
           - php: '7.4'
-            symfony-require: 3.4.*
+            symfony-version: 3.4.*
           - php: '7.4'
-            symfony-require: 4.4.*
+            symfony-version: 4.4.*
           - php: '8.0'
-            symfony-require: 5.4.*
+            symfony-version: 5.4.*
 
     steps:
       - name: Checkout code
@@ -37,9 +37,9 @@ jobs:
       - name: Composer validate
         run: composer validate --strict --no-check-lock
 
-      - name: Globally install symfony/flex
-        if: matrix.symfony-require != '*'
-        run: composer global require --no-progress --no-scripts --no-plugins symfony/flex
+      - name: Symfony version
+        if: matrix.symfony-version != '*'
+        run: composer global require --no-progress symfony/flex && composer config extra.symfony.require ${{ matrix.symfony-version }}
 
       - name: Install dependencies
         run: composer update --prefer-dist --no-interaction --no-progress
