Replace PHPSpec with PHPUnit
PHPSpec blocks the upgrade to Symfony 6. Replacing it with the industry standard PHPUnit.
This makes it way easier for contributors to work on the code.

--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,21 @@
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^7.0"
+        "symfony/phpunit-bridge": "^5.3",
+        "guzzlehttp/psr7": "^2.1"
     },
     "autoload": {
         "psr-4": {
             "Http\\Client\\Common\\Plugin\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Http\\Client\\Common\\Plugin\\Tests\\": "tests/"
+        }
+    },
     "scripts": {
-        "test": "vendor/bin/phpspec run",
-        "test-ci": "vendor/bin/phpspec run -c phpspec.yml.ci"
+        "test": "vendor/bin/simple-phpunit"
     },
     "extra": {
         "branch-alias": {
