--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,13 +88,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "friends-of-phpspec/phpspec-code-coverage:^6.1.0" --no-interaction --no-update
           composer update --prefer-dist --no-interaction --no-progress
 
       - name: Execute tests
-        run: composer test-ci
-
-      - name: Upload coverage
-        run: |
-          wget https://scrutinizer-ci.com/ocular.phar
-          php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml
+        run: composer test
