--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.3', '7.4', '8.0']
+        php: ['7.3', '7.4', '8.0', '8.2']
         symfony-version: ['*']
         include:
           - php: '7.4'
@@ -24,6 +24,8 @@ jobs:
             symfony-version: 5.4.*
           - php: '8.0'
             symfony-version: 6.0.*
+          - php: '8.2'
+            symfony-version: 7.0.*
 
     steps:
       - name: Checkout code
@@ -38,6 +40,9 @@ jobs:
 
       - name: Composer validate
         run: composer validate --strict --no-check-lock
+
+      - name: Flex Plugin
+        run: composer global config --no-plugins allow-plugins.symfony/flex true
 
       - name: Symfony version
         if: matrix.symfony-version != '*'
