--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": "^7.3 || ^8.0",
-        "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0 || ^6.0",
+        "symfony/stopwatch": "^3.4 || ^4.0 || ^5.0 || ^6.0 || ^7.0",
         "php-http/client-common": "^1.9 || ^2.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^5.3",
+        "symfony/phpunit-bridge": "^6.4.1",
         "guzzlehttp/psr7": "^2.1"
     },
     "autoload": {
@@ -35,6 +35,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.3-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "symfony/flex": true
         }
     },
     "prefer-stable": true,
